Index id as long instead of String #18